data/derived/comb/progs/unify/prog7266.ml.out
Characters 76-77:
  |h::t -> [t] @ listReverse h;;
                             ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
